examples/test/testpolicy19473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19473
  namespace: namespace476
spec:
  podSelector:
    matchLabels:
      key30: value30
      key12: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value43
          key14: value2
          key23: value16
      podSelector:
        matchLabels:
          key5: value28
